--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -15,12 +15,12 @@ chardet==5.2.0
 charset-normalizer==3.2.0
 Chroma==0.2.0
 chroma-hnswlib==0.7.2
-chromadb==0.4.5
+chromadb
 click==8.1.6
 coloredlogs==15.0.1
 cryptography==42.0.4
 dataclasses-json==0.5.14
-fastapi==0.99.1
+fastapi==0.109.1
 filetype==1.2.0
 frozenlist==1.4.0
 gast==0.4.0
@@ -63,8 +63,8 @@ pulsar-client==3.2.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
-pycryptodome==3.18.0
-pydantic==1.10.13
+pycryptodome==3.19.1
+pydantic
 PyPika==0.48.9
 python-dateutil==2.8.2
 python-dotenv==1.0.0
@@ -78,7 +78,6 @@ six==1.16.0
 sniffio==1.3.0
 soupsieve==2.4.1
 SQLAlchemy==2.0.19
-starlette==0.27.0
 sympy==1.12
 tabulate==0.9.0
 tenacity==8.2.2
@@ -89,8 +88,6 @@ tensorflow-macos==2.16.2
 termcolor==2.3.0
 tokenizers==0.13.3
 tqdm==4.66.3
-typing-inspect==0.9.0
-typing_extensions==4.5.0
 unstructured==0.9.2
 urllib3==1.26.19
 watchfiles==0.19.0
