--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -15,7 +15,7 @@ chardet==5.2.0
 charset-normalizer==3.2.0
 Chroma==0.2.0
 chroma-hnswlib==0.7.2
-chromadb
+chromadb==0.3.26
 click==8.1.6
 coloredlogs==15.0.1
 cryptography==42.0.4
