--- a/model/fly.toml
+++ b/model/fly.toml
@@ -10,10 +10,10 @@ primary_region = 'ord'
 
 [[mounts]]
   source = 'fastapillamadata'
-  destination = '/data'
+  destination = '/root/.ollama'
 
 [http_service]
-  internal_port = 8000
+  internal_port = 8080
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
